testsuite/tests/properties/invalid_n_propgate/bad_arity_dyn_0/test.lkt
from common import BazNode, FooNode

class BarNode: FooNode {
    @ignored fun main_prop(): Equation = node.ref_var <- BazNode.prop4%()
}
